finish migration to mojmaps